--- a/students/amir-vu.html
+++ b/students/amir-vu.html
@@ -19,13 +19,13 @@
       <div class="vitals-container">
         <div class="profile-photo" id="diane-vu-card"></div>
         <div class="social-icon-container">
-          <a href="https://twitter.com/dianevug"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="http://www.linkedin.com/in/vudiane"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="http://www.github.com/dianelvu"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="https://twitter.com/apatel04"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/amir-patel-572279144/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="http://www.github.com/amirdpatel16"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Diane Vu</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Amir Patel</h1>
+          <h2 class="profile-location">Chicago, IL</h2>
           <div class="profile-quote">Community Manager at Learn</div>
         </div>
       </div>
